--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,8 +1,8 @@
-<div class="col-sm-3 col-md-2 sidebar">
+<div ng-controller="SidebarController">
     <ul class="nav nav-sidebar">
-        <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="profile.view.html">Profile</a></li>
-        <li><a href="../admin/admin.view.html">Admin</a></li>
-        <li><a href="../forms/forms.view.html">Forms</a></li>
+        <li ng-class="{'active': $location.url() == '/home'}"><a href="#/home">Home</a></li>
+        <li ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
+        <li ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
+        <li ng-class="{'active': $location.url() == '/form'}"><a href="#/form">Form</a></li>
     </ul>
 </div>
