--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -1,111 +1,41 @@
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-controller="RegisterController">
+    <h1>Register</h1>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Register</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../../css/style.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="inputName" class="col-sm-2 control-label">Username: </label>
+            <div class="col-sm-10">
+                <input ng-model="user.username" type="text" class="form-control" id="inputName" placeholder="Username">
+            </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="register.view.html">Register</a></li>
-                <li><a href="login.view.html">Login</a></li>
-                <li><a href="login.view.html">Username</a></li>
-                <li><a href="login.view.html">Logout</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
+
+        <div class="form-group">
+            <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
+            <div class="col-sm-10">
+                <input ng-model="user.password" type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
         </div>
-    </div>
-</nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-                <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="profile.view.html">Profile</a></li>
-                <li><a href="../admin/admin.view.html">Admin</a></li>
-                <li><a href="../forms/forms.view.html">Forms</a></li>
-            </ul>
+        <div class="form-group">
+            <label for="inputPassword2" class="col-sm-2 control-label">Verify Password: </label>
+            <div class="col-sm-10">
+                <input ng-model="user.password2" type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-            <h1>Register</h1>
-
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label for="inputName" class="col-sm-2 control-label">Username: </label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputName" placeholder="Username">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="inputPassword2" class="col-sm-2 control-label">Verify Password: </label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.view.html" class="btn btn-default btn-block" role="button">Register</a>
-                    </div>
-                </div>
-
-            </form>
-
+        <div class="form-group">
+            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+                <input ng-model="user.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
         </div>
-    </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <a ng-click="register()" type="submit" class="btn btn-default btn-block btn-primary" role="button">Register</a>
+            </div>
+        </div>
+
+    </form>
 </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
