--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -2,9 +2,6 @@
 
     <h1 style="text-align: center">Profile</h1>
 
-    <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
-    <div ng-show="error"  vclass="alert alert-danger"  role="alert">{{error}}</div>
-
     <form class="form-horizontal">
         <div class="form-group">
             <label for="inputName" class="col-sm-2 control-label">Username: </label>
@@ -23,7 +20,7 @@
         <div class="form-group">
             <label for="inputFirstName" class="col-sm-2 control-label">First Name: </label>
             <div class="col-sm-10">
-                <input ng-model="currentUser.firstName" type="text" class="form-control" id="inputFirstName" ng-value="{{user.username}}" placeholder="First Name">
+                <input ng-model="currentUser.firstName" type="text" class="form-control" id="inputFirstName" placeholder="First Name">
             </div>
         </div>
 
@@ -35,9 +32,16 @@
         </div>
 
         <div class="form-group">
-            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+            <label for="inputEmail" class="col-sm-2 control-label">Email:</label>
             <div class="col-sm-10">
-                <input ng-model="currentUser.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <input ng-model="currentUser.emails" type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="phones" class="col-sm-2 control-label">Phone:</label>
+            <div class="col-sm-10">
+                <input ng-model="currentUser.phones" type="text" class="form-control" id="phones" placeholder="Phone">
             </div>
         </div>
 
